@@ -22,6 +22,13 @@ apply plugin: 'application'
 //]
 
 //-server -Xms512m -Xmx3076m -XX:NewRatio=50 -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -XX:+UseCompressedOops -XX:MaxGCPauseMillis=400 -XX:GCPauseIntervalMillis=8000 -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime
+applicationDefaultJvmArgs = [
+                             "-server", "-XX:+AggressiveOpts",
+                             "-XX:NewSize=512m", "-XX:MaxNewSize=512m",
+                             "-Xms6g",
+                             "-Xmx6g"
+]
+
 
 
 if (project.hasProperty("mainClass")) {
@@ -68,5 +75,15 @@ sourceSets {
 run {
     if (project.hasProperty("appArgs")) {
         args = Eval.me(appArgs)
+    }
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
